demo4/resources/style.css
* {
    padding: 0;
    margin: 0;
    font-family: 'Poppins', sans-serif;
    font-style: normal;
}


/* split 2 big parts */
.split {
    display: flex;
    flex-direction: row;
}

/* navbar-fixed-left */
.leftside-bar {
    width: 100px;
    /* height: 1500px; */
    left: 0px;
    top: 0px;
    text-align: center;
    background: #8950FC;
    box-shadow: 10px 0px 50px rgba(0, 0, 0, 0.05);
}

.logo-icon {
    /* padding: 13px 17px 42px 17px; */
    margin-top: 13px;
    padding: 0 17px;
}

.leftside-bar-items {
    color: #EEE5FF;
    margin-top: 35px;
}

.dashboard-item-selected {
    width: 60px;
    height: 60px;
    margin: auto;
    border-radius: 6px;

    border: #8950FC;
    background-color: #fff;

    padding-top: 15px;
}

.dashboard-item {
    padding: 21px 39px 21px 40px;
}

/* end leftside navbar-fixed-left */

/* rightside widget */

.rightside-widget {
    width: 100%;
    /* width: 1400px; */
}

.my-menu {
    height: 80px;
}

.my-menu .navbar-brand {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 20px;

    margin-left: 27px;
    margin-right: 19px;
    padding: 25px 0;

    color: #212121;
}

.nav-item {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 21px;

    padding: 30px 12px 29px 12px;
    color: #80808F;
}

.navbar-nav li:first-child {
    margin: 18px 0;
    padding: 12px 11px;
}

.nav-item .active {
    color: #8950FC !important;

    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 21px;

    background: #F3F6F9;
    border-radius: 6px;
}

/* iconbars */
.icon-bar {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.icon-bar .notification {
    display: flex;
    flex-direction: row;
    margin-right: 17.92px;
}

.notification img {
    padding-right: 20px;
}

/* search engine  */
.search-banners {
    background: url("../images/background.png");
    height: 184px;
}

.search-item .sub-header {
    display: flex;
    flex-direction: row;
    align-items: baseline;
}

.search-item {
    padding: 32px 0 40px 40px;
}

.search-title {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 23px;
    line-height: 34px;
    color: #FFFFFF;

    margin-right: 14px;
}

.sub-header span {
    color: #B5B5C3;
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 13px;
    line-height: 20px;
}

/* search-engine */
.flex-row {
    display: flex;
    flex-direction: row;
}

.search-form {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.search-advanced-title {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 15px;
    line-height: 22px;
    color: #FFFFFF;

    padding-left: 30px;
}

.form-input {
    width: 70%;
    margin: 17px 0 40px 40px;
    padding: 10px;
    border-radius: 6px;
    background: #fff;
    align-items: center;
}

.form-group {
    padding: 10px 0;
    display: flex;
    /* hmm... */
}

.form-input input {
    outline: 0;
    height: 30px;
    padding: 15px 25px;
    border: none;
    border-right: 2px solid #a4a4a4;
    margin-right: 10px;

}

.form-group img {
    width: 30px;
}

.form-group:nth-child(3) input {
    border-right: none;
    width: 75%;
}

.search-btn {
    background: #212121;
    border-radius: 6px;
    width: 82px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.search-btn p {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 600;
    font-size: 12px;
    line-height: 18px;
    color: #FFFFFF;
    margin: 0 !important;
}

/* pattern */
.rel {
    position: relative;
}

.abs {
    position: absolute;
}

.abs.img {
    top: 0;
    right: 0;
}

/* widgets */
.rightside-widget {
    background: #D5D9E2;
}


.weekly-sale-stats,
.wrapped-header-and-table {
    background: #FFFFFF;
    border-radius: 12px;
}

.wrapped-header-and-table {
    height: 465px;
}

/* first row */


.first-row,
.second-row,
.third-row {
    display: flex;
    flex-direction: row;
}

.weekly-sale-stats {
    margin: 40px;
    width: 410px;
    position: relative;
    margin-right: 0;
}

.wrapped .wrapped-title {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 17px;
    line-height: 26px;

    color: #464E5F;
    padding: 23px 0 0 30px;

}

.wrapped .wrapped-description {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 23px;

    color: #80808F;
    padding: 1px 0 0 30px;
}

.rank-sale {
    padding: 18px 30px 20px 30px;
}

.rank {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 30px;
}

.rank-child {
    display: flex;
    flex-direction: row;
}

.rank-child img {
    padding-right: 14px;
}

.rank-child .name {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 13px;
    line-height: 20px;

    color: #000000;

}

.rank-child .speciality {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 18px;
    color: #B5B5C3;
}

.weekly-sale-income {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 13px;
    line-height: 20px;
    color: #80808F;

    background: #F3F6F9;
    border-radius: 6px;
    padding: 5px 4px;

}

.weekly-sale-chart {
    position: absolute;
    bottom: 0;
}

.weekly-sale-chart img {
    width: 100%;
}

/* wrapped header and table */
/* ..... */
.wrapped-header-and-table {
    margin: 40px;
}

.upper-table {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.btn-new-report {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 12px;
    line-height: 18px;
    color: #FFFFFF;

    background: #8950FC;
    border-radius: 6px;

    padding: 8px 19px;
    margin-right: 30px;
}

.left-side-title {
    padding: 26px 0 7px 29px;
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 21px;
    color: #212121;

}

.left-side-description {
    padding: 0 0 25px 29px;
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 12px;
    line-height: 21px;
    color: #B5B5C3;
}

/* table */

.table-bellow {
    padding: 0 30px;
    width: 860px;
}

.table-bellow th {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 12px;
    line-height: 18px;
    letter-spacing: 0.03em;

    color: #B5B5C3;

}

.table-bellow th:last-child {
    text-align: right;
}

.arrow-down {
    color: #3699FF !important;
}

td {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 14px;

    color: #464E5F;

}

.btn-action {
    display: flex;
    justify-content: right;
}

.btn-action div {
    padding-left: 10px;
}

.date {
    color: #3699FF;
}

.sub-description {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 13px;
    color: #B5B5C3;
}

.table input[type='checkbox'] {
    background-color: #F3F6F9;
    border-radius: 6px;
    width: 25px;
    height: 25px;
    vertical-align: middle;
    outline: none;
    appearance: none;
    -webkit-appearance: none;
    cursor: pointer;
}

tr:last-child td {
    border-bottom: none;
}

.status {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 500;
    font-size: 11px;
    line-height: 16px;
    padding: 5px 0px 7px 0px;
    text-align: center;

}

.approved {
    background: #EEE5FF;
    border-radius: 6px;
    color: #8950FC;
}

.in-progress {
    background: #FFF4DE;
    border-radius: 6px;
    color: #FFA800;
}

.success {
    background: #C9F7F5;
    border-radius: 6px;
    color: #1BC5BD;
}

.rejected {
    background: #FFE2E5;
    border-radius: 6px;
    color: #F64E60;
}

/* second row */

.second-row .extend {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-right: 30px;
}

.second-row .sale-title {
    font-family: 'Poppins';
    font-style: normal;
    font-weight: 600;
    font-size: 17px;
    line-height: 26px;
    color: #FFFFFF;

}

.sumary {
    padding: 50px 60px;
    background: #FFFFFF;
    border-radius: 12px;
    position: absolute;
    width: 100%;
    height: 265px;
    bottom: 0;
}

.sale-progress {
    background: radial-gradient(50% 38.76% at 50% 31.25%, #A075F8 0%, #8950FC 100%);
    border-radius: 12px;
    position: relative;
}

.sale-progress-chart {
    margin: 0 40px;
    margin-top: 32px;
}

.sumary .sumary-title {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500 !important;
    font-size: 12px !important;
    line-height: 18px;
    color: #B5B5C3;
}

.sumary .sumary-content {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 20px;
    line-height: 30px;
    color: #464E5F;
}

/* third row */

.last-row {
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    padding-right: 30px;
}

.third-row .header {
    font-family: 'Poppins',sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 21px;

    color: #B5B5C3;
}

.header-post {
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 600;
    font-size: 22px;
    line-height: 33px;
    color: #212121;

    padding: 25px 30px 20px 29px;
}

